crates/onus-cli/tests/snapshots/scenarios__s8-secret.json.snap
---
source: crates/onus-cli/tests/scenarios.rs
expression: json
---
{
  "schemaVersion": 1,
  "base": "base",
  "head": "head",
  "summary": {
    "meaningChanges": 2,
    "needsAttention": 1,
    "secrets": 1,
    "newRuleViolations": 0,
    "intentMismatches": 0
  },
  "changes": [
    {
      "id": "secret-committed:services/billing/src/payments.ts",
      "kind": "security-sensitive",
      "subkind": "secret-committed",
      "level": "behavior",
      "subject": "services/billing/src/payments.ts",
      "component": "billing",
      "kindLabel": "Secret committed",
      "title": "AWS access key ID and AWS secret access key committed in `services/billing/src/payments.ts`",
      "whyItMatters": "Anyone with access to the repository can use it; revoke it, then load it from a secret store (value not shown); needs a person",
      "hints": {
        "labels": [
          "payments"
        ],
        "blastRadius": 0,
        "novelty": [
          "secret"
        ],
        "confidence": "static",
        "rulesOfTheGame": false,
        "intentMismatch": false,
        "needsPerson": true
      },
      "locations": [
        {
          "file": "services/billing/src/payments.ts",
          "lines": [
            4,
            4
          ],
          "side": "head"
        },
        {
          "file": "services/billing/src/payments.ts",
          "lines": [
            5,
            5
          ],
          "side": "head"
        }
      ]
    },
    {
      "id": "internal-changes:billing",
      "kind": "internal",
      "subkind": "internal-changes",
      "level": "structure",
      "subject": "billing",
      "component": "billing",
      "kindLabel": "Internal",
      "title": "5 lines of new code inside `billing`",
      "whyItMatters": "Stays inside `billing`",
      "hints": {
        "labels": [
          "payments"
        ],
        "blastRadius": 0,
        "novelty": [],
        "confidence": "static",
        "rulesOfTheGame": false,
        "intentMismatch": false,
        "needsPerson": false
      },
      "locations": [
        {
          "file": "services/billing/src/payments.ts",
          "lines": [
            6,
            6
          ],
          "side": "head"
        },
        {
          "file": "services/billing/src/payments.ts",
          "lines": [
            25,
            28
          ],
          "side": "head"
        }
      ],
      "stats": {
        "linesAdded": 5,
        "linesRemoved": 0,
        "files": 1
      }
    }
  ],
  "ruleViolations": [],
  "structure": {
    "movedFiles": [],
    "formattingOnly": []
  },
  "textStats": {
    "files": 1,
    "linesAdded": 7,
    "linesRemoved": 0
  },
  "mapDiagnostics": []
}
