crates/onus-cli/tests/snapshots/scenarios__s8-secret.md.snap
---
source: crates/onus-cli/tests/scenarios.rs
expression: md
---
<!-- onus-report -->
### Onus · 2 meaning-level changes · 1 needs attention · 7 lines in 1 file

|   | Change | Kind | Why it matters |
|---|---|---|---|
| ● | AWS access key ID and AWS secret access key committed in `services/billing/src/payments.ts` | Secret committed | Anyone with access to the repository can use it; revoke it, then load it from a secret store (value not shown); needs a person |
| ○ | 5 lines of new code inside `billing` | Internal | Stays inside `billing`; no other component depends on it |

**Intent check:** not stated (add an `onus-intent` block to the pull request) · **Boundary rules:** no new violations

<details><summary>Evidence per row (files and lines)</summary>

1. **AWS access key ID and AWS secret access key committed in `services/billing/src/payments.ts`**
   - kind `security-sensitive` / `secret-committed` · confidence `static` · labels payments · novelty secret
   - `services/billing/src/payments.ts` lines 4, 5
2. **5 lines of new code inside `billing`**
   - kind `internal` / `internal-changes` · confidence `static` · labels payments · +5 −0 in 1 file
   - `services/billing/src/payments.ts` lines 6, 25–28

</details>

<details><summary>Map confidence notes</summary>

Every import, call and event in the changed files was resolved statically.

</details>
